--- a/public/style.css
+++ b/public/style.css
@@ -45,6 +45,15 @@ body {
     margin-top: 10px;
 }
 
+#gameTitle {
+    white-space: nowrap;
+    font-family: 'Brush Script MT', cursive; /* For a rustic look */
+    color: #4b2e09; /* Earthy brown color */
+    text-align: center;
+    font-size: 2em;
+    /* Additional styling */
+}
+
 @keyframes glitter {
     0% {
         color: #FFC0CB; /* Light Pink */
@@ -85,4 +94,17 @@ body {
     background-size: 200%;
     animation: shimmer 2s linear infinite, wave 1s linear infinite;
     text-shadow: 0 0 2px #fff;
+}
+
+#linkedImageContainer img {
+    max-width: 40%; /* Ensures the image is responsive */
+    height: auto;    /* Maintains the aspect ratio */
+    display: block;  /* Remove any extra space below the image */
+    margin: 20px auto;  /* Center the image if it's smaller than the container */
+}
+
+#game-area, #linkedImageContainer {
+    display: block;
+    width: 100%; /* Or set a specific width */
+    margin: auto; /* Centering if needed */
 }
