--- a/public/style.css
+++ b/public/style.css
@@ -27,21 +27,6 @@ body {
     animation: rainbow 2s linear infinite;
 }
 
-@keyframes polychrome {
-    0%,100% { color: red; }
-    8% { color: pink; }
-    16% { color: purple; }
-    25% { color: green; }
-    33% { color: orange; }
-    41% { color: skyblue; }
-    50% { color: navy; }
-    58% { color: orangered; }
-    66% { color: indigo; }
-    75% { color: black; }
-    83% { color: yellow; }
-    91% { color: chartreuse; }
-}
-
 #game-area {
     text-align: center;
     padding: 20px;
@@ -91,7 +76,10 @@ body {
     font-weight: bold;
     text-align: center;
     display: none; /* Initially hidden */
-    animation: polychrome 1s linear infinite;
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
+    background-size: 200%;
+    animation: shimmer 2s linear infinite, wave 1s linear infinite;
+    text-shadow: 0 0 2px #fff;
 }
 
 #user-guess {
@@ -136,6 +124,21 @@ body {
     }
 }
 
+@keyframes polychrome {
+    0%,100% { color: red; }
+    8% { color: pink; }
+    16% { color: purple; }
+    25% { color: green; }
+    33% { color: orange; }
+    41% { color: skyblue; }
+    50% { color: navy; }
+    58% { color: orangered; }
+    66% { color: indigo; }
+    75% { color: black; }
+    83% { color: yellow; }
+    91% { color: chartreuse; }
+}
+
 @keyframes shimmer {
     0% {
         background-position: -500%;
@@ -154,7 +157,7 @@ body {
     }
 }
 
-#generating-message {
+#continue-message {
     /* Existing styles */
     color: transparent;
     background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
