--- a/public/style.css
+++ b/public/style.css
@@ -175,3 +175,24 @@ body {
     border: 1px solid #ddd; /* example border */
     border-radius: 5px; /* rounded corners */
 }
+
+#tile-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 600px;
+    margin: auto;
+}
+
+.tile {
+    user-select: none;
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    cursor: pointer;
+    background-color: lightgray;
+}
