--- a/public/style.css
+++ b/public/style.css
@@ -178,21 +178,24 @@ body {
 
 #tile-container {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    flex-wrap: wrap;
-    max-width: 600px;
+    align-items: center;
+    max-width: 100%;
     margin: auto;
+    overflow: hidden; /* Prevents overflow if the word is too long */
 }
 
 .tile {
     user-select: none;
-    width: 50px;
-    height: 50px;
+    flex-grow: 1;
+    flex-basis: 0;
     border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px;
+    margin: 2px;
     cursor: pointer;
     background-color: lightgray;
+    text-align: center;
 }
