--- a/public/style.css
+++ b/public/style.css
@@ -202,6 +202,7 @@ body {
 }
 
 #rack-container {
+    justify-content: center;
     width: 100%; /* Make the SVG responsive */
     max-width: 600px; /* Maximum width */
     height: auto; /* Maintain aspect ratio */
