improved spacing for rack-container

--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,9 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f4f4f4;
+    background: linear-gradient(to bottom, orange, #8B4513); /* Gold to SaddleBrown */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+    border: 1px solid #000; /* Optional: adds a border */
 }
 
 @keyframes rainbow {
@@ -34,11 +37,7 @@ body {
     text-align: center;
     align-items: center;
     padding: 20px;
-    background-color: white;
     /*background: linear-gradient(to bottom, orange, salmon);*/
-    background: linear-gradient(to bottom, orange, #8B4513); /* Gold to SaddleBrown */
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-    border: 1px solid #000; /* Optional: adds a border */
     display: block;
     width: 100%; /* Or set a specific width */
     margin: auto; /* Centering if needed */
@@ -205,8 +204,9 @@ body {
 
 #rack-container {
     justify-content: center;
-    max-width: 600px; /* Maximum width */
     height: auto; /* Maintain aspect ratio */
     display: none; /* hide at start */
-    margin: auto
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
