--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@ body {
     background: linear-gradient(to bottom, orange, #8B4513); /* Gold to SaddleBrown */
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
     border: 1px solid #000; /* Optional: adds a border */
+    background-attachment: fixed;  
 }
 
 @keyframes rainbow {
