--- a/public/style.css
+++ b/public/style.css
@@ -6,10 +6,6 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f4f4f4;
-    background: linear-gradient(to bottom, orange, #8B4513); /* Gold to SaddleBrown */
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-    border: 1px solid #000; /* Optional: adds a border */
-    background-attachment: fixed;  
 }
 
 @keyframes rainbow {
@@ -38,7 +34,11 @@ body {
     text-align: center;
     align-items: center;
     padding: 20px;
+    background-color: white;
     /*background: linear-gradient(to bottom, orange, salmon);*/
+    background: linear-gradient(to bottom, orange, #8B4513); /* Gold to SaddleBrown */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+    border: 1px solid #000; /* Optional: adds a border */
     display: block;
     width: 100%; /* Or set a specific width */
     margin: auto; /* Centering if needed */
